--- a/drivers/sensor/CMakeLists.txt
+++ b/drivers/sensor/CMakeLists.txt
@@ -1,4 +1,4 @@
 # Copyright (c) 2021 Nordic Semiconductor ASA
 # SPDX-License-Identifier: Apache-2.0
 
-add_subdirectory_ifdef(CONFIG_EXAMPLESENSOR examplesensor)
+add_subdirectory_ifdef(CONFIG_GROVE_MULTICHANNEL_GAS_SENSOR_V2 multichannel_gas_v2)
