--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -9,4 +9,7 @@ find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
 project(app LANGUAGES C)
 
-target_sources(app PRIVATE src/main.c)
+target_sources(app PRIVATE
+        src/main.c
+        src/sensor_acquisition.c
+        )
