--- a/app/prj.conf
+++ b/app/prj.conf
@@ -3,4 +3,15 @@
 #
 # This file contains selected Kconfig options for the application.
 
+#CONFIG_I2C=y
 CONFIG_SENSOR=y
+CONFIG_RING_BUFFER=y
+
+# General logging stuff
+CONFIG_LOG=y
+CONFIG_APP_LOG_LEVEL_DBG=y
+CONFIG_LOG_BUFFER_SIZE=2048
+# I2C logging
+CONFIG_I2C_DUMP_MESSAGES=y
+CONFIG_I2C_LOG_LEVEL_DBG=y
+CONFIG_I2C_DUMP_MESSAGES_ALLOWLIST=y
