--- a/app/sample.yaml
+++ b/app/sample.yaml
@@ -3,12 +3,12 @@
 # so that you can easily test all of them locally or in CI.
 sample:
   description: Example application
-  name: example-application 
+  name: example-application
 common:
   build_only: true
   integration_platforms:
-    - custom_plank
-    - nucleo_f302r8
+    - m5stack_core2
+    - qemu_cortex_m0
 tests:
   app.default: {}
   app.debug:
