--- a/app/prj.conf
+++ b/app/prj.conf
@@ -7,11 +7,12 @@
 CONFIG_SENSOR=y
 CONFIG_RING_BUFFER=y
 
+CONFIG_SHELL=y
 # General logging stuff
 CONFIG_LOG=y
 CONFIG_APP_LOG_LEVEL_DBG=y
 CONFIG_LOG_BUFFER_SIZE=2048
 # I2C logging
-CONFIG_I2C_DUMP_MESSAGES=y
-CONFIG_I2C_LOG_LEVEL_DBG=y
-CONFIG_I2C_DUMP_MESSAGES_ALLOWLIST=y
+# CONFIG_I2C_DUMP_MESSAGES=y
+# CONFIG_I2C_LOG_LEVEL_DBG=y
+# CONFIG_I2C_DUMP_MESSAGES_ALLOWLIST=y
