--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -12,4 +12,5 @@ project(app LANGUAGES C)
 target_sources(app PRIVATE
         src/main.c
         src/sensor_acquisition.c
+        src/gui.c
         )
