--- a/app/prj.conf
+++ b/app/prj.conf
@@ -16,3 +16,19 @@ CONFIG_LOG_BUFFER_SIZE=2048
 # CONFIG_I2C_DUMP_MESSAGES=y
 # CONFIG_I2C_LOG_LEVEL_DBG=y
 # CONFIG_I2C_DUMP_MESSAGES_ALLOWLIST=y
+
+CONFIG_GAS_SENSOR_SAMPLING_RATE=2
+
+# GUI
+CONFIG_LVGL=y
+CONFIG_LV_Z_MEM_POOL_SIZE=16384
+CONFIG_DISPLAY=y
+CONFIG_DISPLAY_LOG_LEVEL_ERR=y
+CONFIG_LV_MEM_CUSTOM=y
+CONFIG_LV_USE_LOG=y
+CONFIG_LV_USE_LABEL=y
+CONFIG_LV_USE_BTN=y
+CONFIG_LV_FONT_MONTSERRAT_14=y
+
+
+# ZBUS
