--- a/west.yml
+++ b/west.yml
@@ -18,8 +18,6 @@ manifest:
         # strictly needed by the application.
         name-allowlist:
           - cmsis      # required by the ARM port
-          - hal_nordic # required by the custom_plank board (Nordic based)
-          - hal_stm32  # required by the nucleo_f302r8 board (STM32 based)
-          - hal_espressif # m5stack core 2, ...
-          - hal_atmel  # wio terminal, ...
+          - hal_espressif # ex. m5stack core 2
+          - hal_atmel  # ex. wio terminal, ...
           - lvgl
