--- a/app/Kconfig
+++ b/app/Kconfig
@@ -16,18 +16,11 @@ module = APP
 module-str = APP
 source "subsys/logging/Kconfig.template.log_config"
 
-config GAS_SENSOR_SAMPLING_RATE
-        int "Gas sensors sampling rate (Hz)"
-        default 10
-        range 1 100
+config APP_INFERENCE_PERIOD
+        int "Model inference period (milliseconds)"
+        default 50
+        range 50 1000
         help
-          Set the sampling rate of the gas sensors in Hz.
-
-config GAS_SENSOR_NUM_SAMPLES
-        int "Number of gas sensor samples"
-        default 20
-        range 1 100
-        help
-          Set the number of gas sensor samples used for inference.
+          How often to run the model inference.
 
 endmenu
