--- a/app/prj.conf
+++ b/app/prj.conf
@@ -1,9 +1,4 @@
-# Copyright (c) 2021 Nordic Semiconductor ASA
-# SPDX-License-Identifier: Apache-2.0
-#
-# This file contains selected Kconfig options for the application.
-
-#CONFIG_I2C=y
+CONFIG_I2C=y
 CONFIG_SENSOR=y
 CONFIG_RING_BUFFER=y
 
@@ -16,8 +11,6 @@ CONFIG_LOG_BUFFER_SIZE=2048
 # CONFIG_I2C_DUMP_MESSAGES=y
 # CONFIG_I2C_LOG_LEVEL_DBG=y
 # CONFIG_I2C_DUMP_MESSAGES_ALLOWLIST=y
-
-CONFIG_GAS_SENSOR_SAMPLING_RATE=2
 
 # Edge Impulse
 CONFIG_CPP=y
