--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,27 +9,27 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
-    container: ghcr.io/zephyrproject-rtos/ci:v0.26.2 
+    container: ghcr.io/zephyrproject-rtos/ci:v0.26.2
     env:
       CMAKE_PREFIX_PATH: /opt/toolchains
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          path: example-application
+          path: artificial-nose-zephyr
 
       - name: Initialize
-        working-directory: example-application
+        working-directory: artificial-nose-zephyr
         run: |
           west init -l .
-          west update
+          west update -o=--depth=1 -n
 
       - name: Build firmware
-        working-directory: example-application
+        working-directory: artificial-nose-zephyr
         run: |
           west twister -T app -v --inline-logs --integration
 
       - name: Twister Tests
-        working-directory: example-application
+        working-directory: artificial-nose-zephyr
         run: |
           west twister -T tests --integration
