--- a/app/prj.conf
+++ b/app/prj.conf
@@ -42,3 +42,7 @@ CONFIG_ZBUS_RUNTIME_OBSERVERS=y
 CONFIG_ZBUS_CHANNEL_NAME=y
 CONFIG_ZBUS_LOG_LEVEL_WRN=y
 
+# Networking
+CONFIG_NETWORKING=y
+CONFIG_NET_TCP=y
+CONFIG_HWINFO=y
