fix ci: fetch Espressif RF blobs
Signed-off-by: Benjamin Cabé <benjamin@zephyrproject.org>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           west init -l .
           west update -o=--depth=1 -n
+          west blobs fetch hal_espressif
 
       - name: Build firmware
         working-directory: artificial-nose-zephyr
