add sensor shell to default config
Signed-off-by: Benjamin Cabé <benjamin@zephyrproject.org>

--- a/app/prj.conf
+++ b/app/prj.conf
@@ -3,6 +3,7 @@ CONFIG_SENSOR=y
 CONFIG_RING_BUFFER=y
 
 CONFIG_SHELL=y
+CONFIG_SENSOR_SHELL=y
 # General logging stuff
 CONFIG_LOG=y
 CONFIG_APP_LOG_LEVEL_ERR=y
