--- a/app/boards/native_posix_64.conf
+++ b/app/boards/native_posix_64.conf
@@ -1,2 +1,3 @@
 CONFIG_HEAP_MEM_POOL_SIZE=1024
 CONFIG_TEST_RANDOM_GENERATOR=y # temporary, only for generating fake charts
+CONFIG_SDL_DISPLAY_ZOOM_PCT=200
