force heap size to 90K on m5Stack core2
Signed-off-by: Benjamin Cabé <benjamin@zephyrproject.org>

--- a/app/boards/m5stack_core2.conf
+++ b/app/boards/m5stack_core2.conf
@@ -7,5 +7,6 @@ CONFIG_NET_DHCPV4=y
 CONFIG_ESP32_WIFI_STA_AUTO_DHCPV4=y
 
 CONFIG_HEAP_MEM_POOL_SIZE=90000
+CONFIG_HEAP_MEM_POOL_IGNORE_MIN=y
 CONFIG_ESP_SPIRAM=y
 CONFIG_ESP32_WIFI_NET_ALLOC_SPIRAM=y
